--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 
 	<!-- Navbar start -->
-	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
+	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="">
 		<div class="container">
 			<a class="navbar-brand" href="index.html">Arup</a>
 			<button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse"
