--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
 				<div class="overlay"></div>
 				<div class="container">
 					<div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end">
-						<div class="one-third js-fullheight order-md-last img"
+						<div class=""
 							style="background-image:url(assets/img/bg_1.png);">
 							<div class="overlay"></div>
 						</div>
-						<div class="one-forth d-flex  align-items-center ftco-animate">
+						<div class="">
 							<div class="text">
 								<span class="subheading">Hello!</span>
 								<h1 class="mb-4 mt-3">I'm <span>Arup Kumer Bose</span></h1>
@@ -80,11 +80,11 @@
 				<div class="overlay"></div>
 				<div class="container">
 					<div class="row d-flex no-gutters slider-text align-items-end justify-content-end">
-						<div class="one-third js-fullheight order-md-last img"
+						<div class=""
 							style="background-image:url(assets/img/bg_2.png);">
 							<div class="overlay"></div>
 						</div>
-						<div class="one-forth d-flex align-items-center ftco-animate">
+						<div class="">
 							<div class="text">
 								<span class="subheading">Hello!</span>
 								<h1 class="mb-4 mt-3">I'm a <span>web developer</span> based in London</h1>
