--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-<body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
+<body>
 
 	<!-- Navbar start -->
 	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
@@ -59,11 +59,11 @@
 				<div class="overlay"></div>
 				<div class="container">
 					<div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end">
-						<div class=""
+						<div class="one-third js-fullheight order-md-last img"
 							style="background-image:url(assets/img/bg_1.png);">
 							<div class="overlay"></div>
 						</div>
-						<div class="">
+						<div class="one-forth d-flex align-items-center ftco-animate">
 							<div class="text">
 								<span class="subheading">Hello!</span>
 								<h1 class="mb-4 mt-3">I'm <span>Arup Kumer Bose</span></h1>
@@ -80,11 +80,11 @@
 				<div class="overlay"></div>
 				<div class="container">
 					<div class="row d-flex no-gutters slider-text align-items-end justify-content-end">
-						<div class=""
+						<div class="one-third js-fullheight order-md-last img"
 							style="background-image:url(assets/img/bg_2.png);">
 							<div class="overlay"></div>
 						</div>
-						<div class="">
+						<div class="one-forth d-flex align-items-center ftco-animate">
 							<div class="text">
 								<span class="subheading">Hello!</span>
 								<h1 class="mb-4 mt-3">I'm a <span>web developer</span> based in London</h1>
