--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-<body>
-
+<body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 	<!-- Navbar start -->
 	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
 		<div class="container">
@@ -1028,7 +1027,7 @@
 				stroke="#F96D00" />
 		</svg></div>
 
-
+    <!-- js link -->
 	<script src="assets/js/jquery.min.js"></script>
 	<script src="assets/js/jquery-migrate-3.0.1.min.js"></script>
 	<script src="assets/js/popper.min.js"></script>
