--- a/index.html
+++ b/index.html
@@ -820,7 +820,7 @@
 		  <div class="row d-flex">
 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
-				<a href="single.html" class="block-20" style="background-image: url('assets/img/image_1.jpg');">
+				<a href="single.html" class="block-20" style="background-image:url('./assets/img/image_1.jpg');">
 				</a>
 				<div class="text mt-3 float-right d-block">
 					<div class="d-flex align-items-center mb-3 meta">
