--- a/index.html
+++ b/index.html
@@ -458,7 +458,6 @@
 						</div>
 					</a>
 				</div>
-
 				<div class="col-md-4 text-center d-flex ftco-animate">
 					<a href="#" class="services-1">
 						<span class="icon">
@@ -492,7 +491,8 @@
 				<div class="col-md-4 text-center d-flex ftco-animate">
 					<a href="#" class="services-1">
 						<span class="icon">
-							<i class="flaticon-ideas"></i>
+							<i class="fi fi-rr-list-check"></i>
+							<i class="flaticon-analysis"></i>
 						</span>
 						<div class="desc">
 							<h3 class="mb-5">Video and Live Chat Software</h3>
@@ -502,7 +502,7 @@
 				<div class="col-md-4 text-center d-flex ftco-animate">
 					<a href="#" class="services-1">
 						<span class="icon">
-							<i class="flaticon-ideas"></i>
+							<i class="flaticon-flasks"></i>
 						</span>
 						<div class="desc">
 							<h3 class="mb-5">Full-Stack Development</h3>
@@ -522,7 +522,7 @@
 				<div class="col-md-4 text-center d-flex ftco-animate">
 					<a href="#" class="services-1">
 						<span class="icon">
-							<i class="flaticon-ideas"></i>
+							<i class="flaticon-analysis"></i>
 						</span>
 						<div class="desc">
 							<h3 class="mb-5">API Development and Integration</h3>
@@ -532,7 +532,7 @@
 				<div class="col-md-4 text-center d-flex ftco-animate">
 					<a href="#" class="services-1">
 						<span class="icon">
-							<i class="flaticon-ideas"></i>
+							<i class="flaticon-flasks"></i>
 						</span>
 						<div class="desc">
 							<h3 class="mb-5">Maintenance and Support</h3>
@@ -648,9 +648,9 @@
 							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
 							<span>Php</span>
 
-							<div class="d-flex p-4 justify-content-between align-items-center">
-								<h3><a href="/portfolio-details.html"><button class="btn1">Live</button></a></h3>
-								<h3><a href="/portfolio-details.html"><button class="btn1">Details</button></a></h3>
+							<div class="d-flex justify-content-between align-items-center">
+								<h3><a href="/portfolio-details.html"><button class="btn1 rounded-pill border-0">Live</button></a></h3>
+								<h3><a href="/portfolio-details.html"><button class="btn1 rounded-pill border-0">Details</button></a></h3>
 							</div>
 						</div>
 					</div>
@@ -663,9 +663,9 @@
 							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
 							<span>html</span>
 
-							<div class="d-flex p-5 justify-content-between">
-								<h3><a href="/portfolio-details.html"><button class="btn1">Live</button></a></h3>
-								<h3><a href="/portfolio-details.html"><button class="btn1">Details</button></a></h3>
+							<div class="d-flex justify-content-between">
+								<h3><a href="/portfolio-details.html"><button class="btn1 rounded-pill border-0">Live</button></a></h3>
+								<h3><a href="/portfolio-details.html"><button class="btn1 rounded-pill border-0">Details</button></a></h3>
 							</div>
 						</div>
 					</div>
@@ -678,9 +678,9 @@
 						<div class="text text-center p-4">
 							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
 							<span>css</span>
-							<div class="d-flex p-5 justify-content-between">
-								<h3><a href="/portfolio-details.html"><button class="btn1">Live</button></a></h3>
-								<h3><a href="/portfolio-details.html"><button class="btn1">Details</button></a></h3>
+							<div class="d-flex justify-content-between">
+								<h3><a href="/portfolio-details.html"><button class="btn1 rounded-pill border-0">Live</button></a></h3>
+								<h3><a href="/portfolio-details.html"><button class="btn1 rounded-pill border-0">Details</button></a></h3>
 							</div>
 						</div>
 					</div>
@@ -691,9 +691,9 @@
 						<div class="text text-center p-4">
 							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
 							<span>react</span>
-							<div class="d-flex p-5 justify-content-between">
-								<h3><a href="/portfolio-details.html"><button class="btn1">Live</button></a></h3>
-								<h3><a href="/portfolio-details.html"><button class="btn1">Details</button></a></h3>
+							<div class="d-flex justify-content-between">
+								<h3><a href="/portfolio-details.html"><button class="btn1 rounded-pill border-0">Live</button></a></h3>
+								<h3><a href="/portfolio-details.html"><button class="btn1 rounded-pill border-0">Details</button></a></h3>
 							</div>
 						</div>
 					</div>
@@ -707,9 +707,9 @@
 								<div class="text text-center p-4">
 									<h3><a href="#">Branding &amp; Illustration Design</a></h3>
 									<span>vue js</span>
-									<div class="d-flex p-4 justify-content-between">
-										<h3><a href="/portfolio-details.html"><button class="btn1">Live</button></a></h3>
-										<h3><a href="/portfolio-details.html"><button class="btn1">Details</button></a></h3>
+									<div class="d-flex justify-content-between">
+										<h3><a href="/portfolio-details.html"><button class="btn1 rounded-pill border-0">Live</button></a></h3>
+										<h3><a href="/portfolio-details.html"><button class="btn1 rounded-pill border-0">Details</button></a></h3>
 									</div>
 								</div>
 							</div>
@@ -721,9 +721,9 @@
 								<div class="text text-center p-4">
 									<h3><a href="#">Branding &amp; Illustration Design</a></h3>
 									<span>Web</span>
-									<div class="d-flex p-4 justify-content-between">
-										<h3><a href="/portfolio-details.html"><button class="btn1">Live</button></a></h3>
-										<h3><a href="/portfolio-details.html"><button class="btn1">Details</button></a></h3>
+									<div class="d-flex justify-content-between">
+										<h3><a href="/portfolio-details.html"><button class="btn1 rounded-pill border-0">Live</button></a></h3>
+										<h3><a href="/portfolio-details.html"><button class="btn1 rounded-pill border-0">Details</button></a></h3>
 									</div>
 								</div>
 							</div>
@@ -807,6 +807,7 @@
 		</div>
 	</section>
 	<!-- Blog-section end -->
+
 	<!-- Section-counter start -->
 	<section class="ftco-section ftco-no-pt ftco-no-pb ftco-counter img" id="section-counter">
 		<div class="container">
