--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 	<title>Arup Kumer Bose</title>
 	<meta charset="utf-8">
@@ -74,7 +73,7 @@
 				<div class="container">
 					<div class="row d-flex no-gutters slider-text align-items-end justify-content-end">
 						<div class="one-third js-fullheight order-md-last img"
-							style="background-image:url(assets/img/bg_1.png);">
+							style="background-image:url(assets/img/bg_2.png);">
 							<div class="overlay"></div>
 						</div>
 						<div class="one-forth d-flex align-items-center ftco-animate">
@@ -114,11 +113,9 @@
 							<ul class="about-info mt-4 px-md-0 px-2">
 								<li class="d-flex"><span>Name:</span> <span>Arup Kumer Bose</span></li>
 								<li class="d-flex"><span>Date of birth:</span> <span>October 20, 1995</span></li>
-								<li class="d-flex"><span>Address:</span> <span> Sherpur
-										Town,Sherpur-2100,Mymenshing</span></li>
+								<li class="d-flex"><span>Address:</span> <span> Sherpur Town,Sherpur-2100,Mymenshing</span></li>
 								<li class="d-flex"><span>Zip code:</span> <span>2100</span></li>
-								<li class="d-flex"><span>Email:</span> <span class="w-auto">
-										arupkumerbose@gmail.com</span></li>
+								<li class="d-flex"><span>Email:</span> <span class="w-auto"> arupkumerbose@gmail.com</span></li>
 								<li class="d-flex"><span>Phone: </span> <span>+8801571721910</span></li>
 							</ul>
 						</div>
@@ -651,10 +648,8 @@
 							<span>Php</span>
 
 							<div class="d-flex justify-content-between align-items-center">
-								<h3><a href="/portfolio-details.html"><button
-											class="btn1 rounded-pill border-0">Live</button></a></h3>
-								<h3><a href="/portfolio-details.html"><button
-											class="btn1 rounded-pill border-0">Details</button></a></h3>
+								<h3><a href="/portfolio-details.html"><button class="btn1 rounded-pill border-0">Live</button></a></h3>
+								<h3><a href="/portfolio-details.html"><button class="btn1 rounded-pill border-0">Details</button></a></h3>
 							</div>
 						</div>
 					</div>
@@ -668,10 +663,8 @@
 							<span>html</span>
 
 							<div class="d-flex justify-content-between">
-								<h3><a href="/portfolio-details.html"><button
-											class="btn1 rounded-pill border-0">Live</button></a></h3>
-								<h3><a href="/portfolio-details.html"><button
-											class="btn1 rounded-pill border-0">Details</button></a></h3>
+								<h3><a href="/portfolio-details.html"><button class="btn1 rounded-pill border-0">Live</button></a></h3>
+								<h3><a href="/portfolio-details.html"><button class="btn1 rounded-pill border-0">Details</button></a></h3>
 							</div>
 						</div>
 					</div>
@@ -685,10 +678,8 @@
 							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
 							<span>css</span>
 							<div class="d-flex justify-content-between">
-								<h3><a href="/portfolio-details.html"><button
-											class="btn1 rounded-pill border-0">Live</button></a></h3>
-								<h3><a href="/portfolio-details.html"><button
-											class="btn1 rounded-pill border-0">Details</button></a></h3>
+								<h3><a href="/portfolio-details.html"><button class="btn1 rounded-pill border-0">Live</button></a></h3>
+								<h3><a href="/portfolio-details.html"><button class="btn1 rounded-pill border-0">Details</button></a></h3>
 							</div>
 						</div>
 					</div>
@@ -700,10 +691,8 @@
 							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
 							<span>react</span>
 							<div class="d-flex justify-content-between">
-								<h3><a href="/portfolio-details.html"><button
-											class="btn1 rounded-pill border-0">Live</button></a></h3>
-								<h3><a href="/portfolio-details.html"><button
-											class="btn1 rounded-pill border-0">Details</button></a></h3>
+								<h3><a href="/portfolio-details.html"><button class="btn1 rounded-pill border-0">Live</button></a></h3>
+								<h3><a href="/portfolio-details.html"><button class="btn1 rounded-pill border-0">Details</button></a></h3>
 							</div>
 						</div>
 					</div>
@@ -718,10 +707,8 @@
 									<h3><a href="#">Branding &amp; Illustration Design</a></h3>
 									<span>vue js</span>
 									<div class="d-flex justify-content-between">
-										<h3><a href="/portfolio-details.html"><button
-													class="btn1 rounded-pill border-0">Live</button></a></h3>
-										<h3><a href="/portfolio-details.html"><button
-													class="btn1 rounded-pill border-0">Details</button></a></h3>
+										<h3><a href="/portfolio-details.html"><button class="btn1 rounded-pill border-0">Live</button></a></h3>
+										<h3><a href="/portfolio-details.html"><button class="btn1 rounded-pill border-0">Details</button></a></h3>
 									</div>
 								</div>
 							</div>
@@ -734,10 +721,8 @@
 									<h3><a href="#">Branding &amp; Illustration Design</a></h3>
 									<span>Web</span>
 									<div class="d-flex justify-content-between">
-										<h3><a href="/portfolio-details.html"><button
-													class="btn1 rounded-pill border-0">Live</button></a></h3>
-										<h3><a href="/portfolio-details.html"><button
-													class="btn1 rounded-pill border-0">Details</button></a></h3>
+										<h3><a href="/portfolio-details.html"><button class="btn1 rounded-pill border-0">Live</button></a></h3>
+										<h3><a href="/portfolio-details.html"><button class="btn1 rounded-pill border-0">Details</button></a></h3>
 									</div>
 								</div>
 							</div>
@@ -1018,8 +1003,8 @@
 					<p>
 						Copyright &copy;
 						<script>document.write(new Date().getFullYear());</script> All rights reserved | This template
-						is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="#"
-							target="_blank">Brainchild</a>
+						is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a
+							href="#" target="_blank">Brainchild</a>
 					</p>
 				</div>
 			</div>
@@ -1035,7 +1020,7 @@
 				stroke="#F96D00" />
 		</svg></div>
 
-	<!-- js link -->
+    <!-- js link -->
 	<script src="assets/js/jquery.min.js"></script>
 	<script src="assets/js/jquery-migrate-3.0.1.min.js"></script>
 	<script src="assets/js/popper.min.js"></script>
