--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -75,21 +75,22 @@
               </div>
             </div>
             <div class="swiper-pagination"></div>
-          </div>
+          </div> 
+                <!-- tag section -->
           <div class="tag-box ftco-animate fadeInUp ftco-animated">
             <h3 class="heading-sidebar">TECHNOLOGIES</h3>
             <div class="tagcloud">
-              <a href="#" class="tag-cloud-link">house</a>
-              <a href="#" class="tag-cloud-link">office</a>
-              <a href="#" class="tag-cloud-link">building</a>
-              <a href="#" class="tag-cloud-link">land</a>
-              <a href="#" class="tag-cloud-link">table</a>
-              <a href="#" class="tag-cloud-link">interior</a>
-              <a href="#" class="tag-cloud-link">exterior</a>
-              <a href="#" class="tag-cloud-link">industrial</a>
-              <a href="#" class="tag-cloud-link">house</a>
-              <a href="#" class="tag-cloud-link">office</a>
-              <a href="#" class="tag-cloud-link">building</a>
+              <a href="#" class="tag-cloud-link">Html</a>
+              <a href="#" class="tag-cloud-link">Css</a>
+              <a href="#" class="tag-cloud-link">Tailwind</a>
+              <a href="#" class="tag-cloud-link">Php</a>
+              <a href="#" class="tag-cloud-link">Laravel</a>
+              <a href="#" class="tag-cloud-link">JavaScript</a>
+              <a href="#" class="tag-cloud-link">Vue js</a>
+              <a href="#" class="tag-cloud-link">React</a>
+              <a href="#" class="tag-cloud-link">jquery</a>
+              <a href="#" class="tag-cloud-link">Scss</a>
+              <a href="#" class="tag-cloud-link">Aos</a>
               <a href="#" class="tag-cloud-link">land</a>
               <a href="#" class="tag-cloud-link">table</a>
               <a href="#" class="tag-cloud-link">interior</a>
