--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<title>Arup Kumer Bose</title>
 	<meta charset="utf-8">
@@ -11,10 +12,14 @@
 	<link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
 	<link rel="stylesheet" href="assets/css/magnific-popup.css">
 	<link rel="stylesheet" href="assets/css/aos.css">
-	<link rel="stylesheet" href="assets/css/ionicons.min.css">
+	<!-- <link rel="stylesheet" href="assets/css/ionicons.min.css"> -->
 	<link rel="stylesheet" href="assets/css/flaticon.css">
 	<link rel="stylesheet" href="assets/css/icomoon.css">
 	<link rel="stylesheet" href="assets/css/style.css">
+	<link rel='stylesheet'
+		href='https://cdn-uicons.flaticon.com/2.5.1/uicons-thin-straight/css/uicons-thin-straight.css'>
+	<link rel='stylesheet'
+		href='https://cdn-uicons.flaticon.com/2.5.1/uicons-regular-rounded/css/uicons-regular-rounded.css'>
 </head>
 
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
@@ -113,9 +118,11 @@
 							<ul class="about-info mt-4 px-md-0 px-2">
 								<li class="d-flex"><span>Name:</span> <span>Arup Kumer Bose</span></li>
 								<li class="d-flex"><span>Date of birth:</span> <span>October 20, 1995</span></li>
-								<li class="d-flex"><span>Address:</span> <span> Sherpur Town,Sherpur-2100,Mymenshing</span></li>
+								<li class="d-flex"><span>Address:</span> <span> Sherpur
+										Town,Sherpur-2100,Mymenshing</span></li>
 								<li class="d-flex"><span>Zip code:</span> <span>2100</span></li>
-								<li class="d-flex"><span>Email:</span> <span class="w-auto"> arupkumerbose@gmail.com</span></li>
+								<li class="d-flex"><span>Email:</span> <span class="w-auto">
+										arupkumerbose@gmail.com</span></li>
 								<li class="d-flex"><span>Phone: </span> <span>+8801571721910</span></li>
 							</ul>
 						</div>
@@ -429,8 +436,7 @@
 				<div class="col-md-4 text-center d-flex ftco-animate">
 					<a href="#" class="services-1">
 						<span class="icon">
-							<i class="fi fi-rr-list-check"></i>
-							<i class="flaticon-analysis"></i>
+							<i class="fi fi-rr-display-code"></i>
 						</span>
 						<div class="desc">
 							<h3 class="mb-5">Custom Software Development</h3>
@@ -440,7 +446,7 @@
 				<div class="col-md-4 text-center d-flex ftco-animate">
 					<a href="#" class="services-1">
 						<span class="icon">
-							<i class="flaticon-flasks"></i>
+							<i class="fi fi-rr-shopping-bag"></i>
 						</span>
 						<div class="desc">
 							<h3 class="mb-5">E-commerce Solutions</h3>
@@ -450,7 +456,7 @@
 				<div class="col-md-4 text-center d-flex ftco-animate">
 					<a href="#" class="services-1">
 						<span class="icon">
-							<i class="flaticon-ideas"></i>
+							<i class="fi fi-rr-api"></i>
 						</span>
 						<div class="desc">
 							<h3 class="mb-5">Enterprise Resource Planning (ERP) Systems</h3>
@@ -460,7 +466,7 @@
 				<div class="col-md-4 text-center d-flex ftco-animate">
 					<a href="#" class="services-1">
 						<span class="icon">
-							<i class="flaticon-analysis"></i>
+							<i class="fi fi-rr-lead-management"></i>
 						</span>
 						<div class="desc">
 							<h3 class="mb-5">Human Resource Management Systems (HRMS)</h3>
@@ -470,7 +476,7 @@
 				<div class="col-md-4 text-center d-flex ftco-animate">
 					<a href="#" class="services-1">
 						<span class="icon">
-							<i class="flaticon-flasks"></i>
+							<i class="fi fi-rr-lesson"></i>
 						</span>
 						<div class="desc">
 							<h3 class="mb-5">Learning Management Systems (LMS)</h3>
@@ -491,7 +497,6 @@
 					<a href="#" class="services-1">
 						<span class="icon">
 							<i class="fi fi-rr-list-check"></i>
-							<i class="flaticon-analysis"></i>
 						</span>
 						<div class="desc">
 							<h3 class="mb-5">Video and Live Chat Software</h3>
@@ -501,7 +506,7 @@
 				<div class="col-md-4 text-center d-flex ftco-animate">
 					<a href="#" class="services-1">
 						<span class="icon">
-							<i class="flaticon-flasks"></i>
+							<i class="fi fi-rr-it"></i>
 						</span>
 						<div class="desc">
 							<h3 class="mb-5">Full-Stack Development</h3>
@@ -511,7 +516,7 @@
 				<div class="col-md-4 text-center d-flex ftco-animate">
 					<a href="#" class="services-1">
 						<span class="icon">
-							<i class="flaticon-ideas"></i>
+							<i class="fi fi-rr-database"></i>
 						</span>
 						<div class="desc">
 							<h3 class="mb-5">Server and Database Management</h3>
@@ -531,7 +536,7 @@
 				<div class="col-md-4 text-center d-flex ftco-animate">
 					<a href="#" class="services-1">
 						<span class="icon">
-							<i class="flaticon-flasks"></i>
+							<i class="fi fi-rr-hr-person"></i>
 						</span>
 						<div class="desc">
 							<h3 class="mb-5">Maintenance and Support</h3>
@@ -541,7 +546,7 @@
 				<div class="col-md-4 text-center d-flex ftco-animate">
 					<a href="#" class="services-1">
 						<span class="icon">
-							<i class="flaticon-ideas"></i>
+							<i class="fi fi-rr-laptop-medical"></i>
 						</span>
 						<div class="desc">
 							<h3 class="mb-5">Consulting and Strategy</h3>
@@ -641,90 +646,132 @@
 			<div class="row">
 				<div class="col-md-4">
 					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-						style="background-image: url(assets/img/project-4.jpg);">
-						<div class="overlay"></div>
-						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-							<span>Php</span>
-
-							<div class="d-flex justify-content-between align-items-center">
-								<h3><a href="/portfolio-details.html"><button class="btn1 rounded-pill border-0">Live</button></a></h3>
-								<h3><a href="/portfolio-details.html"><button class="btn1 rounded-pill border-0">Details</button></a></h3>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-8">
-					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-						style="background-image: url(assets/img/project-5.jpg);">
-						<div class="overlay"></div>
-						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-							<span>html</span>
-
-							<div class="d-flex justify-content-between">
-								<h3><a href="/portfolio-details.html"><button class="btn1 rounded-pill border-0">Live</button></a></h3>
-								<h3><a href="/portfolio-details.html"><button class="btn1 rounded-pill border-0">Details</button></a></h3>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-md-8">
-					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
 						style="background-image: url(assets/img/project-1.jpg);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-							<span>css</span>
+							<h3><a href="#">Medisquare</a></h3>
+							<span>html</span>
+
 							<div class="d-flex justify-content-between">
-								<h3><a href="/portfolio-details.html"><button class="btn1 rounded-pill border-0">Live</button></a></h3>
-								<h3><a href="/portfolio-details.html"><button class="btn1 rounded-pill border-0">Details</button></a></h3>
+								<h3><a class="px-4" target="_blank" href="https://medisquare.com.bd/"><button
+											class="btn1 rounded-pill border-0">Live</button></a></h3>
+								<h3><a href="/portfolio-details -1.html"><button
+											class="btn1 rounded-pill border-0">Details</button></a></h3>
 							</div>
 						</div>
 					</div>
-
+				</div>
+				<div class="col-md-8">
 					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-						style="background-image: url(assets/img/project-6.jpg);">
+						style="background-image: url(assets/img/project-2.jpg);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-							<span>react</span>
+							<h3><a href="#">Shotayu</a></h3>
+							<span>Php</span>
+
+							<div class="d-flex justify-content-between align-items-center">
+								<h3><a class="px-4" target="_blank" href="https://shotayu.com/"><button
+											class="btn1 rounded-pill border-0">Live</button></a></h3>
+								<h3><a href="/portfolio-details -2.html"><button
+											class="btn1 rounded-pill border-0">Details</button></a></h3>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-8">
+					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
+						style="background-image: url(assets/img/project-3.jpg);">
+						<div class="overlay"></div>
+						<div class="text text-center p-4">
+							<h3><a href="#">KlikMoris</a></h3>
+							<span>css</span>
 							<div class="d-flex justify-content-between">
-								<h3><a href="/portfolio-details.html"><button class="btn1 rounded-pill border-0">Live</button></a></h3>
-								<h3><a href="/portfolio-details.html"><button class="btn1 rounded-pill border-0">Details</button></a></h3>
+								<h3><a class="px-4" target="_blank" href="https://klikmoris.mu/"><button
+											class="btn1 rounded-pill border-0">Live</button></a></h3>
+								<h3><a href="/portfolio-details -3.html"><button
+											class="btn1 rounded-pill border-0">Details</button></a></h3>
 							</div>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4">
-					<div class="row">
-						<div class="col-md-12">
-							<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-								style="background-image: url(assets/img/project-2.jpg);">
-								<div class="overlay"></div>
-								<div class="text text-center p-4">
-									<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-									<span>vue js</span>
-									<div class="d-flex justify-content-between">
-										<h3><a href="/portfolio-details.html"><button class="btn1 rounded-pill border-0">Live</button></a></h3>
-										<h3><a href="/portfolio-details.html"><button class="btn1 rounded-pill border-0">Details</button></a></h3>
-									</div>
-								</div>
+					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
+						style="background-image: url(assets/img/project-4.jpg);">
+						<div class="overlay"></div>
+						<div class="text text-center p-4">
+							<h3><a href="#">Paymaster</a></h3>
+							<span>react</span>
+							<div class="d-flex justify-content-between">
+								<h3><a class="px-4" target="_blank" class="px-4"
+										href="http://paymaster.devbose.xyz/login"><button
+											class="btn1 rounded-pill border-0">Live</button></a></h3>
+								<h3><a href="/portfolio-details -4.html"><button
+											class="btn1 rounded-pill border-0">Details</button></a></h3>
 							</div>
 						</div>
-						<div class="col-md-12">
-							<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-								style="background-image: url(assets/img/project-3.jpg);">
-								<div class="overlay"></div>
-								<div class="text text-center p-4">
-									<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-									<span>Web</span>
-									<div class="d-flex justify-content-between">
-										<h3><a href="/portfolio-details.html"><button class="btn1 rounded-pill border-0">Live</button></a></h3>
-										<h3><a href="/portfolio-details.html"><button class="btn1 rounded-pill border-0">Details</button></a></h3>
-									</div>
-								</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
+						style="background-image: url(assets/img/project-5.jpg);">
+						<div class="overlay"></div>
+						<div class="text text-center p-4">
+							<h3><a href="#">AL Jury</a></h3>
+							<span>react</span>
+							<div class="d-flex justify-content-between">
+								<h3><a class="px-4" target="_blank" class="px-4" href="https://hr.aljury.com/"><button
+											class="btn1 rounded-pill border-0">Live</button></a></h3>
+								<h3><a href="/portfolio-details -5.html"><button
+											class="btn1 rounded-pill border-0">Details</button></a></h3>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-8">
+					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
+						style="background-image: url(assets/img/project-6.jpg);">
+						<div class="overlay"></div>
+						<div class="text text-center p-4">
+							<h3><a href="#">AI Architecture</a></h3>
+							<span>css</span>
+							<div class="d-flex justify-content-between">
+								<h3><a class="px-4" target="_blank" href="https://aiarchietcture.in/"><button
+											class="btn1 rounded-pill border-0">Live</button></a></h3>
+								<h3><a href="/portfolio-details -6.html"><button
+											class="btn1 rounded-pill border-0">Details</button></a></h3>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-8">
+					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
+						style="background-image: url(assets/img/project-7.jpg);">
+						<div class="overlay"></div>
+						<div class="text text-center p-4">
+							<h3><a href="#">Wegokart</a></h3>
+							<span>css</span>
+							<div class="d-flex justify-content-between">
+								<h3><a class="px-4" target="_blank" href="https://www.wegokart.com/"><button
+											class="btn1 rounded-pill border-0">Live</button></a></h3>
+								<h3><a href="/portfolio-details -7.html"><button
+											class="btn1 rounded-pill border-0">Details</button></a></h3>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
+						style="background-image: url(assets/img/project-8.jpg);">
+						<div class="overlay"></div>
+						<div class="text text-center p-4">
+							<h3><a href="#">EZS ERP</a></h3>
+							<span>react</span>
+							<div class="d-flex justify-content-between">
+								<h3><a class="px-4" target="_blank" class="px-4"
+										href="http://ezs-erp.devbose.xyz/admin/login"><button
+											class="btn1 rounded-pill border-0">Live</button></a></h3>
+								<h3><a href="/portfolio-details -8.html"><button
+											class="btn1 rounded-pill border-0">Details</button></a></h3>
 							</div>
 						</div>
 					</div>
@@ -814,7 +861,7 @@
 				<div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
 					<div class="block-18">
 						<div class="text">
-							<strong class="number" data-number="100">0</strong>
+							<strong class="number" data-number="20">0</strong>
 							<span>Awards</span>
 						</div>
 					</div>
@@ -822,7 +869,7 @@
 				<div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
 					<div class="block-18">
 						<div class="text">
-							<strong class="number" data-number="1200">0</strong>
+							<strong class="number" data-number="70">0</strong>
 							<span>Complete Projects</span>
 						</div>
 					</div>
@@ -830,7 +877,7 @@
 				<div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
 					<div class="block-18">
 						<div class="text">
-							<strong class="number" data-number="1200">0</strong>
+							<strong class="number" data-number="70">0</strong>
 							<span>Happy Customers</span>
 						</div>
 					</div>
@@ -838,7 +885,7 @@
 				<div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
 					<div class="block-18">
 						<div class="text">
-							<strong class="number" data-number="500">0</strong>
+							<strong class="number" data-number="40">0</strong>
 							<span>Cups of coffee</span>
 						</div>
 					</div>
@@ -1003,8 +1050,8 @@
 					<p>
 						Copyright &copy;
 						<script>document.write(new Date().getFullYear());</script> All rights reserved | This template
-						is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a
-							href="#" target="_blank">Brainchild</a>
+						is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="#"
+							target="_blank">Brainchild</a>
 					</p>
 				</div>
 			</div>
@@ -1020,7 +1067,7 @@
 				stroke="#F96D00" />
 		</svg></div>
 
-    <!-- js link -->
+	<!-- js link -->
 	<script src="assets/js/jquery.min.js"></script>
 	<script src="assets/js/jquery-migrate-3.0.1.min.js"></script>
 	<script src="assets/js/popper.min.js"></script>
